adding and fixing notnull/nullable annotations